--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
 h1 {
-    font-style: italic;
+    font-style: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center
+    text-align: center;
+    background-color: rgba(0, 255, 255, 0.418);
+    width: 80%;
+    
 }
-h1 {
-    background-color: aqua;
-    width: 50%;
-}
+#profilepic {
+    width: 20%;
+    text-align: "center";
+}     
+
 html {
-    background-color: pink;}
+    background-color: gray;}
 body {
-    background-color: orange;
+    background-color: rgba(222, 220, 228, 0.671);
 }
-h2 {font-style: italic;
+ol {
+    font-style: bold;
+    font-family: 'lucida Sans';
+
+}
+h2 {font-style: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center
+    text-align: left;
+    background-color: rgba(0, 255, 255, 0.418);
+    width: 50%
     
     
 }
